fix(icon-preview-filter): gap between filters

--- a/packages/web/src/app/doc-pages/brand/icon-doc/icon-preview-filter/icon-preview-filter.component.scss
+++ b/packages/web/src/app/doc-pages/brand/icon-doc/icon-preview-filter/icon-preview-filter.component.scss
@@ -21,5 +21,5 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  gap: 16px;
+  gap: 32px;
 }
